c/src/test/resources/c/mini_bnc/invalid/havocCast_false-valid-assert.c
typedef int data_t;
extern int __VERIFIER_nondet_int();

int main(){
	int len = (data_t)__VERIFIER_nondet_int();
	ASSERT(len > 0);
	return len;
}
